--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -29,6 +29,9 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+    dexOptions {
+        jumboMode = false
     }
 }
 
