--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BikeShopClienteMobile"
+        android:theme="@style/Theme.VaiEVemClienteMobile"
         android:enableOnBackInvokedCallback="true"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainActivity"
+            android:name="com.example.vaievemclientemobile.view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BikeShopClienteMobile.NoActionBar">
+            android:theme="@style/Theme.VaiEVemClienteMobile.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
