--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.bikeshopclientemobile'
+    namespace 'com.example.vaievemclientemobile'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.bikeshopclientemobile"
+        applicationId "com.example.vaievemclientemobile"
         minSdk 21
         targetSdk 34
         versionCode 1
